--- a/src/sass/global/global-styles.scss
+++ b/src/sass/global/global-styles.scss
@@ -1,6 +1,7 @@
 body {
   min-width: 320px;
-  padding: 0 auto;
+  margin: 0 auto;
+
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -16,4 +17,6 @@ body {
   margin: 0 auto;
 
   border: 1px solid black;
+
+  background-color: #ffffff;
 }
