--- a/src/sass/blocks/map.scss
+++ b/src/sass/blocks/map.scss
@@ -1,3 +1,12 @@
 .map {
+  width: 100%;
   height: 350px;
+
+  background: #f3f1ed url("../img/bg-map-mobile@1x.jpg") no-repeat;
+  background-position: 50% top;
+  background-size: cover;
+}
+
+.map__img {
+  width: 100%;
 }
