--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -8,12 +8,20 @@
   text-align: center;
 
   background-color: $bg-blue;
-  border-bottom: 1px solid #678fa8;
-  box-shadow: 0 1px 0 #9ac2db;
+  box-shadow: inset 0 1px 0 #678fa8,
+              inset 0 2px 0 #9ac2db;
+}
+
+.menu__item:first-child {
+  box-shadow: none;
 }
 
 .menu__link {
+  display: block;
+  padding: 10px 0 12px 0;
+
   text-decoration: none;
+  text-transform: uppercase;
   font-size: 18px;
   line-height: 40px;
   color: #ffffff;
@@ -25,13 +33,8 @@
 
 .menu__burger {
   padding: 12px 20px 12px 0;
+
   text-align: right;
-}
 
-.menu__btn-burger {
-  background: none;
-  outline: none;
-  border: none;
-
-  cursor: pointer;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.5);
 }
