--- a/src/sass/blocks/page-header.scss
+++ b/src/sass/blocks/page-header.scss
@@ -1,3 +1,10 @@
 .page-header__wrapper {
   position: relative;
 }
+
+.page-header__logo {
+  position: absolute;
+  left: 50%;
+  top: 248px;
+  transform: translateX(-50%);
+}
