--- a/src/sass/blocks/search-form.scss
+++ b/src/sass/blocks/search-form.scss
@@ -1,5 +1,5 @@
 .search-form {
-  padding: $block-padding;
+  padding: 28px 30px;
   text-align: center;
 }
 
@@ -10,4 +10,8 @@
 
 .search-form__text {
   @include text();
+}
+
+.search-form__btn {
+  margin: 0 auto;
 }
