--- a/src/sass/global/global-styles.scss
+++ b/src/sass/global/global-styles.scss
@@ -7,16 +7,12 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-  color: #ffffff;
-
-  background-color: lightgreen;
+  color: #000000;
 }
 
 .global-wrapper {
-  width: 320px;
+  min-width: 320px;
   margin: 0 auto;
-
-  border: 1px solid black;
 
   background-color: #ffffff;
 }
