--- a/src/sass/global/mixins.scss
+++ b/src/sass/global/mixins.scss
@@ -2,7 +2,6 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
-  color: #000000;
   text-transform: uppercase;
 }
 
@@ -11,4 +10,5 @@
   font-weight: 400;
   line-height: 21px;
   color: #333333;
+  text-transform: uppercase;
 }
