Оформил страницу фото и видео

--- a/src/sass/blocks/map.scss
+++ b/src/sass/blocks/map.scss
@@ -3,7 +3,7 @@
   height: 350px;
 
   background: #f3f1ed url("../img/bg-map-mobile@1x.jpg") no-repeat;
-  background-position: 50% top;
+  background-position: center center;
   background-size: cover;
 }
 
