--- a/src/sass/blocks/btn.scss
+++ b/src/sass/blocks/btn.scss
@@ -9,6 +9,8 @@
   color: #ffffff;
   text-transform: uppercase;
   text-decoration: none;
+  outline: none;
+  border: none;
 
   background-color: $bg-blue;
 }
