--- a/src/sass/blocks/copyright.scss
+++ b/src/sass/blocks/copyright.scss
@@ -1,4 +1,6 @@
 .copyright {
+  margin: 0;
+
   @include text();
 }
 
@@ -8,4 +10,12 @@
 
 .copyright__img {
   vertical-align: bottom;
+
+  &:hover {
+    fill: #81b3d2;
+  }
+
+  &:active {
+    fill: #b2b2b2;
+  }
 }
