--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -10,6 +10,7 @@
   background-color: $bg-blue;
   box-shadow: inset 0 1px 0 #678fa8,
               inset 0 2px 0 #9ac2db;
+
 }
 
 .menu__item:first-child {
@@ -18,23 +19,46 @@
 
 .menu__link {
   display: block;
-  padding: 10px 0 12px 0;
+  padding: 6px 0 8px 0;
 
   text-decoration: none;
   text-transform: uppercase;
   font-size: 18px;
   line-height: 40px;
+  font-weight: 700;
   color: #ffffff;
+
+  &--active {
+    cursor: context-menu;
+  }
+
+  &:hover:not(.menu__link--active) {
+    @include btn-blue-hover();
+  }
+
+  &:active:not(.menu__link--active) {
+    @include btn-blue-active();
+  }
 }
 
 .menu__link--cursor {
   cursor: default;
 }
 
-.menu__burger {
+.menu__wrapper {
+  position: relative;
+
   padding: 12px 20px 12px 0;
+  height: 32px;
 
-  text-align: right;
+  box-shadow: 0 -4px 10px -4px rgba(0, 0, 0, 0.5);
+}
 
-  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.5);
+.menu__logo {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+
+  margin: 0 auto;
 }
