--- a/src/sass/blocks/page-footer.scss
+++ b/src/sass/blocks/page-footer.scss
@@ -1,11 +1,12 @@
 .page-footer {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
+  text-align: center;
   padding: 35px 0 20px 0;
 }
 
 .page-footer__hashtag {
   @include title();
+}
+
+.page-footer__social-icons {
+  padding: 30px 0;
 }
