--- a/src/sass/blocks/search-form.scss
+++ b/src/sass/blocks/search-form.scss
@@ -1,5 +1,5 @@
 .search-form {
-  padding: 28px 30px;
+  padding: 10px 30px;
   text-align: center;
 }
 
@@ -13,5 +13,18 @@
 }
 
 .search-form__btn {
-  margin: 0 auto;
+  margin: 40px auto;
+  font-weight: 700;
+
+  &:hover {
+    @include btn-blue-hover();
+  }
+
+  &:active {
+    @include btn-blue-active();
+  }
+
+  &:disabled {
+    background-color: #e5e5e5;
+  }
 }
