--- a/src/sass/global/global-styles.scss
+++ b/src/sass/global/global-styles.scss
@@ -11,8 +11,37 @@ body {
 }
 
 .global-wrapper {
-  min-width: 320px;
+  width: 320px;
   margin: 0 auto;
 
   background-color: #ffffff;
+}
+
+.clearfix {
+  &:after {
+    content: "";
+    display: table;
+
+    clear: both;
+  }
+}
+
+@keyframes btn-blick {
+  0% {
+    background-color: #3e84ae;
+  }
+  100% {
+    background-color: #5496bd;
+  }
+}
+
+.visually-hidden {
+  margin: -1px;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
+  position: absolute;
 }
