--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/menu.scss";
 @import "blocks/popup-error.scss";
 @import "blocks/popup-success.scss";
+@import "blocks/post.scss";
 @import "blocks/reason.scss";
 @import "blocks/search-form.scss";
 @import "blocks/social-icons.scss";
