--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,7 +11,7 @@
 @import "blocks/btn.scss";
 @import "blocks/copyright.scss";
 @import "blocks/feedback-form.scss";
-@import "blocks/gallery.scss";
+@import "blocks/posts.scss";
 @import "blocks/hashtag.scss";
 @import "blocks/heading.scss";
 @import "blocks/intro.scss";
