--- a/src/sass/blocks/page-footer.scss
+++ b/src/sass/blocks/page-footer.scss
@@ -1,6 +1,7 @@
 .page-footer {
   text-align: center;
-  padding: 35px 0 20px 0;
+  padding-top: 35px;
+  padding-bottom: 20px;
 }
 
 .page-footer__hashtag {
