--- a/src/sass/blocks/popup-success.scss
+++ b/src/sass/blocks/popup-success.scss
@@ -1,9 +1,11 @@
 .popup-success {
   display: none;
-  padding: 35px 0;
+  padding: 35px 12%;
+  width: 100%;
 
   text-align: center;
 
+  background-color: #ffffff;
   box-shadow: 0px -3px 10px -8px #000000,
               0px 5px 10px -8px #000000;
 }
