--- a/src/sass/blocks/video-player.scss
+++ b/src/sass/blocks/video-player.scss
@@ -1,6 +1,6 @@
 .video-player {
   width: 87%;
-  height: 110px;
+  min-height: 110px;
 
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -15,23 +15,33 @@
   left: 0;
 
   width: 100%;
-  height: 66px;
+  min-height: 66px;
   background-color: #f2f2f2;
 }
 
 .video-player__progress-bar {
-  padding: 22px 8% 20px 8%;
+  padding-top: 22px;
+  padding-bottom: 20px;
+  padding-left: 8%;
+  padding-right: 8%;
+
+  cursor: pointer;
 }
 
 .video-player__time-line {
   position: relative;
 
-  width: 100%;
   height: 3px;
 
   font-size: 0;
 
   background-color: rgba(255, 255, 255, 0.2);
+
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
 }
 
 .video-player__toggle {
@@ -46,6 +56,11 @@
 
   background-color: #ffffff;
   border-radius: 50%;
+
+  &:hover {
+    transform: scale(1.7);
+    background-color: rgba(0, 0, 0, 1);
+  }
 }
 
 .video-player__replay-btn {
@@ -67,6 +82,8 @@
   border: none;
   outline: none;
 
+  cursor: pointer;
+
   &:hover .video-player__btn-img polygon,
   &:hover .video-player__btn-img path {
     fill: #333333;
@@ -77,7 +94,6 @@
   }
 }
 
-.video-player__btn-img polygon,
-.video-player__btn-img path {
+.video-player__btn-img {
   fill: #5c6870;
 }
