--- a/src/sass/blocks/popup-error.scss
+++ b/src/sass/blocks/popup-error.scss
@@ -1,7 +1,7 @@
 .popup-error {
   display: none;
-  padding: 35px 12%;
-  width: 100%;
+  padding: 35px 0;
+  width: 320px;
 
   text-align: center;
 
