--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -11,10 +11,10 @@
   box-shadow: inset 0 1px 0 #678fa8,
               inset 0 2px 0 #9ac2db;
 
-}
+  &:first-child {
+    box-shadow: none;
+  }
 
-.menu__item:first-child {
-  box-shadow: none;
 }
 
 .menu__link {
