--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -85,8 +85,8 @@
   padding-right: 25px;
 
   text-align: left;
-}
 
-.reason__item:last-child {
-  padding-bottom: 20px;
+  &:last-child {
+    padding-bottom: 20px;
+  }
 }
