--- a/src/sass/blocks/feedback-form.scss
+++ b/src/sass/blocks/feedback-form.scss
@@ -109,6 +109,7 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  color: #000000;
 
   background-color: #f2f2f2;
   border: none;
