--- a/src/sass/blocks/heading.scss
+++ b/src/sass/blocks/heading.scss
@@ -1,5 +1,5 @@
 .heading {
-  padding: 10px 25px;
+  padding: 10px 18%;
   padding-bottom: 0px;
 
   text-align: center;
@@ -11,4 +11,29 @@
 
 .heading__text {
   @include text();
+}
+
+@media ($tablet-widths) {
+  .heading {
+    padding: 0 28%;
+    padding-top: 40px;
+    padding-bottom: 50px;
+  }
+  
+  .heading__title {
+    font-size: 21px;
+    line-height: 26px;
+
+    &--size {
+      font-size: 30px;
+    }
+  }
+}
+
+@media ($desktop-widths) {
+  .heading {
+    padding: 0 30%;
+    padding-top: 40px;
+    padding-bottom: 50px;
+  }
 }
