--- a/src/sass/blocks/page-footer.scss
+++ b/src/sass/blocks/page-footer.scss
@@ -1,5 +1,7 @@
 .page-footer {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 35px;
   padding-bottom: 20px;
 }
@@ -10,4 +12,11 @@
 
 .page-footer__social-icons {
   padding: 30px 0;
+}
+
+@media ($tablet-widths) {
+  .page-footer {
+    flex-direction: row;
+    padding: 0 7%;
+  }
 }
