--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -5,12 +5,11 @@
     padding: 10px 35px;
 
     box-shadow: 0 -1px 0 #d6d6d1;
-    background-color: #eeeeee;
   }
+}
 
-  &--wrapper {
-    padding-left: 20%;
-  }
+.reason__wrapper {
+  background-color: #eeeeee;
 }
 
 .reason__title {
@@ -47,12 +46,13 @@
 }
 
 .reason__img-wrapper {
+  width: 100%;
   height: 260px;
   margin: 0;
 }
 
 .reason__img {
-  width: 100%;
+  width: inherit;
 }
 
 .reason__features {
@@ -69,18 +69,18 @@
   }
 
   &--bg-triangle {
-    padding-top: 50px;
+    padding-top: 65px;
 
     text-align: center;
 
     background: $bg-blue url("../img/bg-triangle.svg") no-repeat;
     background-position: 50% 0%;
-    background-size: contain;
+    background-size: 102%;
   }
 }
 
 .reason__item {
-  margin-top: 30px;
+  padding-top: 30px;
   padding-left: 20%;
   padding-right: 25px;
 
@@ -88,5 +88,63 @@
 
   &:last-child {
     padding-bottom: 20px;
+  }
+}
+
+@media ($tablet-widths), ($desktop-widths) {
+  .reason__features--bg-triangle {
+    background-image: none;
+  }
+}
+
+@media ($tablet-widths) {
+  .reason {
+    display: flex;
+    justify-content: space-between;
+
+    &--bg-gray {
+      flex-direction: column;
+      padding: 30px 3%;
+
+      box-shadow: none;
+    }
+  }
+
+  .reason__item {
+    padding: 40px 6%;
+    padding-top: 120px;
+
+    align-self: baseline;
+    text-align: center;
+  }
+
+  .reason__features {
+    &--bg-triangle {
+      padding-top: 30px;
+    }
+    &--right {
+      order: 2;
+    }
+  }
+
+  .reason__title {
+    padding: 0 15%;
+
+    &:before {
+      top: -100px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  .reason__text {
+    margin: 0;
+    margin-bottom: 20px;
+  }
+
+  .reason__wrapper {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
   }
 }
