--- a/src/sass/global/mixins.scss
+++ b/src/sass/global/mixins.scss
@@ -1,3 +1,12 @@
+@mixin clearfix() {
+  &:after {
+    content: "";
+    display: table;
+
+    clear: both;
+  }
+}
+
 @mixin title() {
   font-size: 18px;
   font-weight: 700;
@@ -49,4 +58,14 @@
   animation-name: btn-blick;
   animation-duration: 0.25s;
   animation-iteration-count: infinite;
+}
+
+@mixin btn-white-hover() {
+  background-color: #ffffff;
+  color: #81b3d2;
+}
+
+@mixin btn-white-active() {
+  background-color: #ffffff;
+  color: rgba(0, 0, 0, 0.3);
 }
