--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -66,7 +66,7 @@
   margin: 0 auto;
 }
 
-@media ($tablet-widths) {
+@media (min-width: $tablet-width) {
   .menu__wrapper {
     height: 0;
     padding: 0;
@@ -74,12 +74,12 @@
 
   .menu__list {
     display: flex;
+    min-width: $tablet-width;
   }
 
   .menu__item {
     &:nth-child(1) {
-      margin-left: 8%;
-      margin-right: 8%;
+      margin: 0 8%;
     }
     &:nth-child(2) {
       margin-right: auto;
@@ -127,7 +127,7 @@
   }
 }
 
-@media ($desktop-widths) {
+@media (min-width: $desktop-width) {
   .menu__item {
     &:nth-child(1) {
       margin-left: 10%;
