--- a/src/sass/blocks/page-footer.scss
+++ b/src/sass/blocks/page-footer.scss
@@ -4,6 +4,7 @@
   align-items: center;
   padding-top: 35px;
   padding-bottom: 20px;
+  min-width: 320px;
 }
 
 .page-footer__hashtag {
@@ -14,7 +15,7 @@
   padding: 30px 0;
 }
 
-@media ($tablet-widths) {
+@media (min-width: $tablet-width) {
   .page-footer {
     flex-direction: row;
     padding: 0 7%;
