--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -91,20 +91,22 @@
   }
 }
 
-@media ($tablet-widths), ($desktop-widths) {
+@media (min-width: 500px) {
   .reason__features--bg-triangle {
     background-image: none;
   }
 }
 
-@media ($tablet-widths) {
+@media (min-width: $tablet-width) {
   .reason {
     display: flex;
     justify-content: space-between;
+    min-width: 180px;
 
     &--bg-gray {
       flex-direction: column;
-      padding: 30px 3%;
+      padding: 30px 0;
+      max-width: 180px;
 
       box-shadow: none;
     }
@@ -127,6 +129,12 @@
     }
   }
 
+  .reason__img-wrapper{
+    &--left {
+      order: 1;
+    }
+  }
+
   .reason__title {
     padding: 0 15%;
 
@@ -145,6 +153,6 @@
   .reason__wrapper {
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
+    min-width: $tablet-width;
   }
 }
