--- a/src/sass/blocks/search-form.scss
+++ b/src/sass/blocks/search-form.scss
@@ -1,7 +1,10 @@
 .search-form {
+  margin: 0 auto;
   padding: 10px 5%;
   padding-bottom: 40px;
-
+  min-width: 280px;
+  max-width: 400px;
+  
   text-align: center;
 }
 
@@ -33,17 +36,16 @@
   }
 }
 
-@media ($tablet-widths) {
+@media (min-width: $tablet-width) {
   .search-form {
-    padding: 0 20%;
+    width: 450px;
     padding-top: 45px;
     padding-bottom: 60px;
   }
 }
 
-@media ($desktop-widths) {
+@media (min-width: $desktop-width) {
   .search-form {
-    padding: 0 30%;
     padding-top: 45px;
     padding-bottom: 70px;
   }
