--- a/src/sass/global/global-styles.scss
+++ b/src/sass/global/global-styles.scss
@@ -1,7 +1,6 @@
 body {
   min-width: 320px;
   margin: 0 auto;
-  padding: 0 3%;
 
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
@@ -18,6 +17,12 @@ body {
   background-color: #ffffff;
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.5),
               0 0 7px rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: $desktop-width) {
+  .global-wrapper {
+    width: $desktop-width;
+  }
 }
 
 @keyframes btn-blick {
