--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -1,5 +1,5 @@
 $color-white: #ffffff;
 $bg-blue: #81b3d2;
 $font-weight-bold: 700;
-$tablet-widths: "min-width: 768px";
-$desktop-widths: "min-width: 1200px";
+$tablet-width: 768px;
+$desktop-width: 1200px;
