--- a/src/sass/blocks/post.scss
+++ b/src/sass/blocks/post.scss
@@ -60,14 +60,19 @@
   fill: #b2b2b2;
 }
 
-@media (min-width: $tablet-width) {
-  .posts {
-    padding: 0 7%;
+@media (min-width: $tablet-width) and (max-width: 1199px) {
+  .post {
+    width: 50%;
   }
-  
+
+  .post__caption {
+    background-color: #f2f2f2;
+  }
+}
+
+@media (min-width: $tablet-width) {
   .post {
     padding: 0;
-    width: 50%;
 
     border: none;
 
@@ -89,8 +94,6 @@
     flex-wrap: wrap;
     align-items: center;
     padding: 15px 3%;
-
-    background-color: #f2f2f2;
   }
 
   .post__like {
@@ -104,5 +107,29 @@
     width: 200px;
 
     text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .post {
+    position: relative;
+
+    width: 400px;
+  }
+
+  .post__caption {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+    color: #ffffff;
+
+    background-color: rgba(0, 0, 0, 0.3);
+
+    box-sizing: border-box;
+  }
+
+  .post__like {
+    color: #ffffff;
   }
 }
