--- a/src/sass/blocks/search-form.scss
+++ b/src/sass/blocks/search-form.scss
@@ -4,7 +4,7 @@
   padding-bottom: 40px;
   min-width: 280px;
   max-width: 400px;
-  
+
   text-align: center;
 }
 
@@ -41,6 +41,10 @@
     width: 450px;
     padding-top: 45px;
     padding-bottom: 60px;
+  }
+
+  .search-form__title {
+    font-size: $font-size-at-big-screen;
   }
 }
 
