--- a/src/sass/blocks/video.scss
+++ b/src/sass/blocks/video.scss
@@ -34,7 +34,19 @@
 
 .video__video-player {
   position: absolute;
-  bottom: -60px;
+  bottom: 6px;
   left: 50%;
   transform: translateX(-50%);
+}
+
+@media (min-width: $tablet-width) {
+  .video__title {
+    margin-top: 55px;
+    font-size: $font-size-at-big-screen;
+  }
+
+  .video__text {
+    margin-bottom: 70px;
+    padding: 0 130px;
+  }
 }
