--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -8,6 +8,8 @@
 }
 
 .menu__item {
+  position: relative;
+
   list-style: none;
   text-align: center;
 
@@ -53,6 +55,8 @@
   padding-left: 20px;
   height: 32px;
 
+  text-align: right;
+
   box-shadow: 0 -4px 10px -4px rgba(0, 0, 0, 0.5);
 }
 
@@ -65,7 +69,136 @@
   margin: 0 auto;
 }
 
+
+.menu__toggle {
+  position: absolute;
+  top: 16px;
+  right: 30px;
+
+  display: block;
+  width: 30px;
+  height: 22px;
+  padding: 0;
+
+  font-size: 0;
+
+  background: none;
+  border: none;
+  outline: none;
+
+  cursor: pointer;
+}
+
+.menu--closed .menu__toggle {
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 1px;
+
+    display: block;
+    width: 30px;
+    height: 4px;
+
+    background-color: #81b3d2;
+    box-shadow: 0 -8px 0 #81b3d2,
+                0 -16px 0 #81b3d2;
+  }
+
+  &:hover::before {
+    background-color: rgba(129, 179, 210, 0.6);
+    box-shadow: 0 -8px 0 rgba(129, 179, 210, 0.6),
+                0 -16px 0 rgba(129, 179, 210, 0.6);
+  }
+
+  &:active::before {
+    transform: rotate(90deg) scale(0) translateX(-200px);
+    transition: 1s;
+    background-color: rgba(129, 179, 210, 1);
+    box-shadow: 0 -8px 0 rgba(129, 179, 210, 1),
+                0 -16px 0 rgba(129, 179, 210, 1);
+  }
+}
+
+.menu--opened .menu__toggle {
+  top: -205px;
+  height: 26px;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 12px;
+    left: 0px;
+
+    display: block;
+    width: 30px;
+    height: 4px;
+
+    background-color: white;
+  }
+
+  &::before {
+    transform: rotate(-45deg);
+  }
+
+  &::after {
+    transform: rotate(45deg);
+  }
+
+  &:hover::before,
+  &:hover::after {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .menu--closed .menu__list {
+    display: none;
+  }
+
+  .menu--opened {
+    display: block;
+    animation-name: animation-menu-opened;
+    animation-duration: 700ms;
+    animation-timing-function: ease-out;
+  }
+
+  .menu--opened .menu__toggle--closed {
+    top: -200px;
+
+    box-shadow: none;
+    &::before {
+      content: "";
+      display: block;
+      width: 23px;
+      height: 4px;
+
+      transform: rotate(45deg);
+      background-color: #ffffff;
+    }
+    &::after {
+      content: "";
+      display: block;
+      width: 23px;
+      height: 4px;
+
+      transform: rotate(-45deg);
+      background-color: #ffffff;
+    }
+  }
+
+  .menu--nojs .menu__toggle,
+  .menu--nojs .menu__list {
+    display: none;
+  }
+}
+
 @media (min-width: $tablet-width) {
+  .menu__toggle {
+    display: none;
+  }
+
   .menu__wrapper {
     height: 0;
     padding: 0;
