--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -2,7 +2,9 @@ $color-white: #ffffff;
 $bg-blue: #81b3d2;
 $font-weight-bold: 700;
 $font-size-at-big-screen: 30px;
-$tablet-width: 768px;
-$desktop-width: 1200px;
 $font-size-legend: 21px;
 $color-bg-lines-legend: #dbdbdb;
+
+$mobile-width-only: 767px;
+$tablet-width: 768px;
+$desktop-width: 1200px;
