--- a/src/sass/blocks/page-footer.scss
+++ b/src/sass/blocks/page-footer.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding-top: 35px;
   padding-bottom: 20px;
-  min-width: 320px;
+  width: auto;
 }
 
 .page-footer__hashtag {
