--- a/src/sass/blocks/post.scss
+++ b/src/sass/blocks/post.scss
@@ -31,7 +31,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  min-width: 320px;
+  width: auto;
+  flex-basis: 320px;
 }
 
 .post__subtitle {
