--- a/src/sass/blocks/heading.scss
+++ b/src/sass/blocks/heading.scss
@@ -15,7 +15,7 @@
 
 @media (min-width: $tablet-width) {
   .heading {
-    padding: 0 26%;
+    padding: 0 25%;
     padding-top: 40px;
     padding-bottom: 50px;
   }
@@ -25,7 +25,7 @@
     line-height: 26px;
 
     &--size {
-      font-size: $font-size-at-big-screen;
+      font-size: $title-size-normal-screen;
     }
   }
 }
