--- a/src/sass/blocks/intro.scss
+++ b/src/sass/blocks/intro.scss
@@ -1,7 +1,9 @@
 .intro {
   width: auto;
+  padding: 0;
   padding-top: 90px;
   padding-bottom: 95px;
+  margin: 0;
 
   text-align: center;
 
@@ -20,10 +22,58 @@
   height: 214px;
 }
 
-@media (min-width: $tablet-width) {
+@media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  .intro {
+    background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@2x.jpg");
+  }
+}
+
+@media (min-width: $tablet-width) and (min-resolution: $retina-dpi),
+(min-width: $tablet-width) and (min-resolution: $retina-dppx)  {
+  .intro {
+    background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@2x.jpg");
+    background-size: 105%, cover;
+    background-position: 50% 100%, 50% 101%;
+  }
+}
+
+@media (min-width: $desktop-width) and (min-resolution: $retina-dpi),
+ (min-width: $desktop-width) and (min-resolution: $retina-dppx) {
+  .intro {
+    background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@2x.jpg");
+    background-position: 50% 100%, 50% 0%;
+    background-size: 104%, $desktop-width;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .intro {
+    padding-top: 70px;
+    
+    background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
+    background-size: 104%, $desktop-width;
+
+    &--padding {
+      padding-top: 100px;
+      padding-bottom: 120px;
+      background-position: 50% 100%, 50% 100%;
+    }
+  }
+  .intro__img {
+    width: 460px;
+    height: 350px;
+
+    &--size {
+      width: 461px;
+      height: 79px;
+    }
+  }
+}
+@media (min-width: $tablet-width) and (max-width: $tablet-max-width) {
   .intro {
     background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
     background-position: 50% 100%, 50% 0%;
+    background-size: 105%, cover;
 
     &--padding {
       padding-top: 100px;
@@ -40,19 +90,6 @@
     &--size {
       width: 458px;
       height: 78px;
-    }
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .intro {
-    background-image: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
-  }
-
-  .intro__img {
-    &--size {
-      width: 461px;
-      height: 79px;
     }
   }
 }
