--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -13,7 +13,7 @@
   list-style: none;
   text-align: center;
 
-  background-color: $bg-blue;
+  background-color: $secondary-bg-color;
   box-shadow: inset 0 1px 0 #678fa8,
               inset 0 2px 0 #9ac2db;
 
@@ -69,27 +69,13 @@
   margin: 0 auto;
 }
 
-
-.menu__toggle {
+.menu__burger {
   position: absolute;
   top: 16px;
   right: 30px;
-
-  display: block;
-  width: 30px;
-  height: 22px;
-  padding: 0;
-
-  font-size: 0;
-
-  background: none;
-  border: none;
-  outline: none;
-
-  cursor: pointer;
 }
 
-.menu--closed .menu__toggle {
+.menu--closed .burger {
   &::before {
     content: "";
     position: absolute;
@@ -105,22 +91,20 @@
                 0 -16px 0 #81b3d2;
   }
 
-  &:hover::before {
-    background-color: rgba(129, 179, 210, 0.6);
-    box-shadow: 0 -8px 0 rgba(129, 179, 210, 0.6),
-                0 -16px 0 rgba(129, 179, 210, 0.6);
-  }
-
   &:active::before {
-    transform: rotate(90deg) scale(0) translateX(-200px);
-    transition: 1s;
     background-color: rgba(129, 179, 210, 1);
     box-shadow: 0 -8px 0 rgba(129, 179, 210, 1),
                 0 -16px 0 rgba(129, 179, 210, 1);
   }
+
+  &:focus {
+    animation-name: menu-btn-close;
+    animation-duration: 800ms;
+    animation-timing-function: ease;
+  }
 }
 
-.menu--opened .menu__toggle {
+.menu--opened .burger {
   top: -205px;
   height: 26px;
 
@@ -148,23 +132,35 @@
 
   &:hover::before,
   &:hover::after {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  &:focus {
+    animation-name: menu-btn-open;
+    animation-duration: 1s;
+    animation-timing-function: ease;
   }
 }
 
 @media (max-width: $mobile-width-only) {
+  .menu--closed {
+    animation-name: menu-closed;
+    animation-duration: 300ms;
+    animation-timing-function: ease-out;
+  }
+
   .menu--closed .menu__list {
     display: none;
   }
 
   .menu--opened {
     display: block;
-    animation-name: animation-menu-opened;
-    animation-duration: 700ms;
+    animation-name: menu-opened;
+    animation-duration: 300ms;
     animation-timing-function: ease-out;
   }
 
-  .menu--opened .menu__toggle--closed {
+  .menu--opened .burger {
     top: -200px;
 
     box-shadow: none;
@@ -188,14 +184,17 @@
     }
   }
 
-  .menu--nojs .menu__toggle,
-  .menu--nojs .menu__list {
+  .menu--nojs .burger {
     display: none;
+  }
+
+  .menu--nojs .menu__list {
+    display: block;
   }
 }
 
 @media (min-width: $tablet-width) {
-  .menu__toggle {
+  .burger {
     display: none;
   }
 
@@ -206,9 +205,13 @@
 
   .menu__list {
     display: flex;
-    min-width: $tablet-width;
+    min-width: 100%;
   }
 
+  .menu__item {
+    box-shadow: none;
+  }
+  
   .menu__link {
     padding: 15px 0;
 
