--- a/src/sass/blocks/social-link.scss
+++ b/src/sass/blocks/social-link.scss
@@ -9,7 +9,7 @@
   text-align: center;
   font-size: 0;
 
-  background-color: $bg-blue;
+  background-color: $secondary-bg-color;
 
   &:hover {
     @include btn-blue-hover();
