--- a/src/sass/blocks/video.scss
+++ b/src/sass/blocks/video.scss
@@ -42,7 +42,7 @@
 @media (min-width: $tablet-width) {
   .video__title {
     margin-top: 55px;
-    font-size: $font-size-at-big-screen;
+    font-size: $title-size-normal-screen;
   }
 
   .video__text {
