--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -1,10 +1,16 @@
-$color-white: #ffffff;
-$bg-blue: #81b3d2;
+$primary-bg-color: #ffffff;
+$secondary-bg-color: #81b3d2;
+$bg-color-titles-lines: #dbdbdb;
+
+$primary-text-color: #000000;
+$secondary-text-color: #ffffff;
 $font-weight-bold: 700;
-$font-size-at-big-screen: 30px;
-$font-size-legend: 21px;
-$color-bg-lines-legend: #dbdbdb;
+$title-size-normal-screen: 30px;
+$title-size-mobile-screen: 21px;
 
 $mobile-width-only: 767px;
 $tablet-width: 768px;
+$tablet-max-width: 1199px;
 $desktop-width: 1200px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
