--- a/src/sass/blocks/map.scss
+++ b/src/sass/blocks/map.scss
@@ -2,7 +2,9 @@
   width: 100%;
   height: 350px;
 
-  background: #f3f1ed url("../img/bg-map-mobile@1x.jpg") no-repeat;
+  background-color: #f3f1ed;
+  background-image: url("../img/bg-map-mobile@1x.jpg");
+  background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
 }
@@ -11,8 +13,15 @@
   width: 99.95%;
 }
 
+@media (min-width: $tablet-width) {
+  .map__img {
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+    background-size: cover;
+  }
+}
+
 @media (min-width: $desktop-width) {
   .map__img {
-    width: 100%;
+    background-image: url("../img/bg-map-desktop@1x.jpg");
   }
 }
