--- a/src/sass/blocks/menu.scss
+++ b/src/sass/blocks/menu.scss
@@ -20,7 +20,6 @@
   &:first-child {
     box-shadow: none;
   }
-
 }
 
 .menu__link {
@@ -209,9 +208,24 @@
   }
 
   .menu__item {
+    box-sizing: border-box;
     box-shadow: none;
+    
+    &:nth-child(1) {
+      margin: 0 8%;
+    }
+    &:nth-child(2) {
+      margin-right: auto;
+    }
+    &:nth-child(3) {
+      margin-left: auto;
+    }
+    &:nth-child(4) {
+      margin-left: 8%;
+      margin-right: 3%;
+    }
   }
-  
+
   .menu__link {
     padding: 15px 0;
 
@@ -243,24 +257,6 @@
 
   .menu__logo {
     top: -56px;
-  }
-}
-
-@media (min-width: $tablet-width) and (max-width: 1199px){
-  .menu__item {
-    &:nth-child(1) {
-      margin: 0 8%;
-    }
-    &:nth-child(2) {
-      margin-right: auto;
-    }
-    &:nth-child(3) {
-      margin-left: auto;
-    }
-    &:nth-child(4) {
-      margin-left: 8%;
-      margin-right: 3%;
-    }
   }
 }
 
