--- a/src/sass/blocks/post.scss
+++ b/src/sass/blocks/post.scss
@@ -17,7 +17,9 @@
 }
 
 .post__img {
+  width: 280px;
   width: 100%;
+  height: 280px;
   margin-bottom: 10px;
 }
 
@@ -61,24 +63,30 @@
   fill: #b2b2b2;
 }
 
-@media (min-width: $tablet-width) and (max-width: 1199px) {
-  .post {
-    width: 50%;
+@media (min-width: 400px) and (max-width: 767px){
+  .post__img {
+    width: 400px;
   }
 
   .post__caption {
-    background-color: #f2f2f2;
+    display: block;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: $tablet-width) {
   .post {
     padding: 0;
+    width: 50%;
 
     border: none;
 
     &:first-child {
       width: 100%;
+    }
+
+    &:first-child .post__img {
+      height: 399px;
     }
 
     &:last-child {
@@ -88,6 +96,9 @@
 
   .post__img {
     margin: 0;
+    width: 324px;
+    width: 100%;
+    height: 267px;
   }
 
   .post__caption {
@@ -95,6 +106,8 @@
     flex-wrap: wrap;
     align-items: center;
     padding: 15px 3%;
+
+    background-color: #f2f2f2;
   }
 
   .post__like {
