--- a/src/sass/blocks/reason.scss
+++ b/src/sass/blocks/reason.scss
@@ -111,7 +111,8 @@
     &--bg-gray {
       flex-direction: column;
       padding: 30px 0;
-
+      width: 245px;
+      
       box-shadow: none;
 
       &:last-child {
@@ -121,7 +122,7 @@
   }
 
   .reason__item {
-    max-width: 205px;
+    max-width: 207px;
     padding: 40px 3%;
     padding-top: 120px;
 
@@ -179,7 +180,8 @@
   }
 
   .reason__item {
-    padding: 40px 4%;
+    padding-left: 4%;
+    padding-right: 4%;
   }
 
   .reason__features {
