--- a/src/sass/blocks/video.scss
+++ b/src/sass/blocks/video.scss
@@ -29,7 +29,9 @@
 
 .video__img {
   margin: 0;
+  width: 320px;
   width: 100%;
+  height: 201px;
 }
 
 .video__video-player {
@@ -37,6 +39,13 @@
   bottom: 6px;
   left: 50%;
   transform: translateX(-50%);
+}
+
+@media (min-width: 400px) and (max-width: 767px){
+  .video {
+    width: 400px;
+    margin: 0 auto;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -48,5 +57,25 @@
   .video__text {
     margin-bottom: 70px;
     padding: 0 130px;
+  }
+
+  .video__img {
+    width: 648px;
+    width: 100%;
+    height: 499px;
+  }
+}
+
+@media (min-width: 860px) and (max-width: 1199px) {
+  .video {
+    width: 740px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .video__img {
+    width: 800px;
+    height: 500px;
   }
 }
